<resources>
    <string name="app_name" translatable="false">Mezu</string>


    <!-- Login Activity Strings-->
    <string name="welcome_message">Welcome to Mezu!!</string>
    <string name="second_welcome_message">Your Money Management App</string>
    <string name="title_activity_login">Sign in</string>
    <string name="server_client_id" translatable="false">1049912020423-il1l41231c8v6grb57vfkh01pk6eciur.apps.googleusercontent.com</string>


    <!--Budgets Activity Strings-->
    <string name="title_activity_budgets">My Budgets</string>
    <string name="no_budgets_message">Looks like you don\'t have any budgets!\nCreate one with the plus button below</string>


    <!--Budget View Activity Strings-->
    <string name="title_activity_budget_view">Budget View</string>
    <string name="general">general</string>
    <string name="no_expenses_message1">Looks like you don\'t have any actions!\nCreate one with the plus button below</string>
    <string name="no_expenses_message2">Create actions and get statistics and graphic data here!\n(try the little plus button)</string>
    <string name="no_expenses_message3">Create actions and we\'ll review them for you here!\n(try the little plus button)</string>


    <!--Expenses Tab Fragment Strings-->
    <string name="expenses_tab_title">Actions</string>
    <string name="recent_expenses">Recent Actions</string>


    <!--Add Expense PopUp Strings-->
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="add_expense">Add an Action</string>
    <string name="expense_title">Title:</string>
    <string name="expense_description">Description:</string>
    <string name="zero_amount" translatable="false">0.00</string>
    <string name="expense">Expense</string>
    <string name="expenses">Expenses</string>
    <string name="income">income</string>
    <string name="incomes">incomes</string>
    <string name="pick_date">Date:</string>
    <string name="pick_time">Time:</string>
    <string name="pick_category_toast">Please pick a category</string>
    <string name="no_repeat">No Repeat</string>
    <string name="every_day">Every Day</string>
    <string name="every_week">Every Week</string>
    <string name="every_two_weeks">Every Two Weeks</string>
    <string name="every_month">Every Month</string>
    <string name="every_two_months">Every Two Months</string>
    <string name="chosen_repeat">Chosen Repeat:</string>



    <!--Categories-->
    <string name="category_food">Food</string>
    <string name="category_shelter">Shelter</string>
    <string name="category_entertainment">Entertainment</string>
    <string name="category_clothing">Clothing</string>
    <string name="category_transportation">Transportation</string>
    <string name="category_medical">Medical</string>
    <string name="category_household">Household Supplies</string>
    <string name="category_insurance">Insurance</string>
    <string name="category_personal">Personal</string>
    <string name="category_education">Education</string>
    <string name="category_gifts">Gifts</string>
    <string name="category_subscriptions">Subscriptions</string>
    <string name="category_debt_reduction">Debt Reduction</string>
    <string name="category_donations">Donations</string>
    <string name="category_paycheck">Paycheck</string>
    <string name="category_other">Other</string>
    <string name="category">Category</string>
    <string name="categories">Categories</string>
    <string name="pick_a_category">Pick a category</string>

    <!--Months-->
    <string name="month_jan">Jan</string>
    <string name="month_feb">Feb</string>
    <string name="month_mar">Mar</string>
    <string name="month_apr">Apr</string>
    <string name="month_may">May</string>
    <string name="month_jun">Jun</string>
    <string name="month_jul">Jul</string>
    <string name="month_aug">Aug</string>
    <string name="month_sep">Sep</string>
    <string name="month_oct">Oct</string>
    <string name="month_nov">Nov</string>
    <string name="month_dec">Dec</string>



    <!--Navigation Drawer Strings-->
    <string name="openDrawer">Open navigation drawer</string>
    <string name="closeDrawer">Close navigation drawer</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>


    <!--Add Budget Activity-->
    <string name="title_activity_add_budget_view">Add Budget</string>
    <string name="add_a_budget">Add a Budget</string>
    <string name="budget_name">Budget name:</string>
    <string name="shared_with">Shared with:</string>
    <string name="partners_list_initizal_text">
        Add partners to your account to manage your finances together.
    </string>
    <string name="add_partner">Add Partner</string>
    <string name="starting_balance">Starting Balance:</string>
    <string name="optional">(Optional)</string>


    <!--Settings Activity-->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>


    <string name="pref_title_language">Language</string>
    <string name="hebrew">Hebrew</string>
    <string name="english">English</string>

    <string-array name="pref_language_list_titles">
        <item>@string/hebrew</item>
        <item>@string/english</item>
    </string-array>
    <string-array name="pref_language_list_values" translatable="false">
        <item>heb</item>
        <item>eng</item>
    </string-array>

    <string name="pref_description_allow_notifications_expenses">"A notification will appear every time an action is added to one of your budgets"</string>
    <string name="pref_title_allow_notifications">Allow notifications</string>
    <string name="pref_estimated_to_over_spend_color">Color my budgets names red if to your estimate my expenses will be greater than my incomes this month.</string>
    <string name="pref_title_estimated_to_over_spend_color">Notify when about to over spend</string>

    <!--Graphs Tab Fragment-->
    <string name="graphs_tab_title">Graphs</string>
    <string name="overall">Overall</string>
    <string name="expenses_by_categories">Actions By Categories</string>
    <string name="expenses_by_months">Actions By Months</string>
    <string name="expenses_by_users">Actions By Users</string>
    <string name="no_data_chart">Start spending to show data!</string>
    <string name="expenses_sum">Actions Sum:</string>
    <string name="most_spending_on">Most spending on:</string>
    <string name="most_expensive_month">Most expensive month:</string>
    <string name="most_expensive_user">Most spending user:</string>
    <string name="not_enough_data">Not enough data!</string>




    <!--Review Tab Fragment-->
    <string name="review_tab_title">Review</string>
    <string name="edit">Edit</string>
    <string name="edit_budget">Edit Budget</string>
    <string name="edit_expense">Edit Action</string>
    <string name="added_by">Added by:</string>
    <string name="save">Save</string>
    <string name="title_activity_edit_budget_view">Edit Budget</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete">Confirm delete</string>
    <string name="expense_deleted">Action Deleted</string>
    <string name="delete_confirmation_budget">Are you sure you want to delete this budget?</string>
    <string name="delete_confirmation_expense">Are you sure you want to delete this action?</string>
    <string name="delete_confirmation_expense_recurrent">Are you sure you want to delete this action (choosing \"ALL\" will also delete future occurrences)?</string>
    <string name="delete_recurring">All</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="partner_list_edit_text">Add more partners to share this budget with</string>
    <string name="category_title">Category:</string>
    <string name="loading_budgets">Loading budgets, please wait...</string>
    <string name="partners_email">partners email:</string>
    <string name="connection_failed">Connection Failed</string>
    <string name="login_failed">Login failed, please try again</string>
    <string name="notifications_options">Notifications</string>
    <string name="must_provide_budget_name">Must provide budget name!</string>
    <string name="choose_different_budget_name">Please choose a different budget name!</string>
    <string name="partner_email_is_empty">Partner\'s email is empty!</string>
    <string name="email_not_valid">Email is not valid!</string>
    <string name="email_already_in_list">Email is already in the list!</string>
    <string name="pref_title_allow_notifications_expenses">Allow notifications on actions</string>
    <string name="minimum_amount_to_notify">Minimum amount to notify</string>
    <string name="pref_description_minimum_amount">Get notifications only for expenses that exceed the given threshold</string>
    <string name="account">Account</string>
    <string name="localization">Localization</string>
    <string name="pref_description_allow_notifications_budgets">A notification will appear every time you are added to a budget</string>
    <string name="pref_title_allow_notifications_budgets">Allow notifications on budgets</string>
    <string name="pref_description_allow_notifications_deviation">A notification will appear every time one of your budget is about to exceed the limit you defined</string>
    <string name="pref_title_allow_notifications_deviation">Allow notifications on deviation</string>
    <string name="contacts_permissions">Why contacts permissions?</string>
    <string name="contacts_permissions_explanation">With access to your contacts, we will be able to auto-complete your partners\' emails</string>
    <string name="got_it">Got It</string>
    <string name="review_incomes">Incomes:</string>
    <string name="review_expenses">Expenses:</string>
    <string name="enter_new_ceiling">Enter a new monthly ceiling</string>
    <string name="empty" translatable="false"></string>
    <string name="number_formating_failed">The monthly ceiling is too high</string>
    <string name="signning_in">Signing in...</string>
    <string name="review_info">Click on a category to define its monthly ceiling</string>
    <string name="overall_expenses">Overall Expenses</string>
    <string name="no_ceiling_wanted">Leave empty to remove monthly ceiling</string>
    <string name="not_a_valid_number">Please enter a valid number</string>
    <string name="export">Export</string>
    <string name="failed_to_create_file">Failed to create file.</string>
    <string name="external_storage_unavailable">External storage unavailable, please try again later.</string>
    <string name="on_exit_by_back">Close Mezu?</string>
    <string name="failed_to_send_email">Failed to send email!</string>


</resources>
