<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/DrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="7dp"
    tools:context="money.mezu.mezu.AddBudgetActivity">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/budget_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:id="@+id/add_budget_layout"
            android:paddingTop="70dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/add_a_budget"
                android:textSize="36sp"
                android:textStyle="bold"/>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/budget_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/budget_name" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                    <AutoCompleteTextView
                        android:id="@+id/partner_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:inputType="textEmailAddress"
                        android:completionThreshold="1"
                        android:hint="@string/partners_email"/>
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/add_partner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/add_partner"
                    android:textColor="@color/white"
                    android:background="@drawable/button_selector"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="4dp"
                android:text="@string/shared_with"
                android:textSize="18sp"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="4dp"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/partners_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/partners_list_initizal_text"
                    android:textAlignment="inherit"
                    android:textSize="18sp"/>
             </FrameLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/starting_balance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/starting_balance"
                    android:inputType="numberSigned"/>
            </android.support.design.widget.TextInputLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/add_budget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/add"
                    android:textColor="@color/white"
                    android:background="@drawable/button_selector"/>

            </FrameLayout>

        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>

    <ViewStub
        android:id="@+id/nav_drawer_stub"
        android:inflatedId="@+id/navigation_drawer"
        android:layout="@layout/nav_drawer_layout"
        android:layout_width="320dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#ffffff">

    </ViewStub>

</android.support.v4.widget.DrawerLayout>
