<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="320dp"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/nav_drawer_header"
        android:layout_width="match_parent"
        android:layout_height="178dp"
        android:background="@drawable/nav_drawer_background_small"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textColor="#ffffff"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:textStyle="normal"/>
        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/rich_man_small"
            android:layout_marginStart="16dp"
            android:layout_marginTop="38dp"
            android:id="@+id/circleView" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:elevation="4dp"
        android:id="@+id/nav_drawer_bottom_options"
        android:clickable="true">

        <LinearLayout
            android:id="@+id/add_budget"
            android:layout_width="match_parent"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:gravity="center_vertical">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_budget_30dp"
                android:paddingStart="30dp"/>

            <TextView
                android:text="@string/add_a_budget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="45dp"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:clickable="true">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_settings_30dp"
                android:paddingStart="30dp"/>

            <TextView
                android:text="@string/settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="45dp"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:clickable="true">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logout_30dp"
                android:paddingStart="30dp"/>

            <TextView
                android:text="@string/log_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="45dp"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/budgets_list"
        android:layout_above="@id/nav_drawer_bottom_options"
        android:layout_below="@id/nav_drawer_header"
        android:dividerHeight="0dp"/>


</RelativeLayout>